# fastapi-tutorials

./: pyproject.toml  run  sql_app.db
async_app/: main.py
oauth2_password_bearer_jwt/: main.py
oauth2_password_bearer_jwt_scopes/: main.py
sql_app/: db_data.sql  db_schema.sql
