[tool.poetry]
name = "fastapi-tutorials"
version = "0.1.0"
description = ""
authors = ["Tomasz Kornuta <tkornuta@getgen.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
